--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -4,7 +4,38 @@
     <div class="form-group">
       <label for="name">Name</label>
       <input id="name" name="name" class="form-control" type="text"/>
-      <button class="btn btn-primary">Send</button>
     </div>
+
+    <div class="form-check form-group">
+      <input type="checkbox" class="form-check-input" id="emailOffers" name="emailOffers">
+      <label class="form-check-label" for="emailOffers">Email Special Offers</label>
+    </div>
+
+    <h5>User Interface Style</h5>
+    <div class="form-group">
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="interface" id="lightInterface" value="light" checked>
+        <label for="lightInterface" class="form-check-label">Light</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="interface" id="mediumInterface" value="medium">
+        <label for="mediumInterface" class="form-check-label">Medium</label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="interface" id="darkInterface" value="dark">
+        <label for="darkInterface" class="form-check-label">Dark</label>
+      </div>
+    </div>
+    
+    <div class="form-group">
+      <label for="subscriptionType">Subscription Type</label>
+      <select id="subscriptionType" class="form-control">
+        <option>Monthly</option>
+        <option>Annual</option>
+        <option>Lifetime</option>
+      </select>
+    </div>
+
+    <button class="btn btn-primary">Send</button>
   </form>
 </div>
