--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -11,7 +11,7 @@
       <label class="form-check-label" for="emailOffers">Email Special Offers</label>
     </div>
 
-    <h5>User Interface Style</h5>
+    <p>User Interface Style</p>
     <div class="form-group">
       <div class="form-check">
         <input class="form-check-input" type="radio" name="interface" id="lightInterface" value="light" checked>
@@ -34,6 +34,11 @@
         <option>Annual</option>
         <option>Lifetime</option>
       </select>
+    </div>
+
+    <div class="form-group">
+      <label for="notes">Notes</label>
+      <textarea name="notes" id="notes" rows="3" class="form-control"></textarea>
     </div>
 
     <button class="btn btn-primary">Send</button>
