--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,35 +1,35 @@
 <div class="container">
   <h2>User Settings</h2>
-  <form>
+  <form #form="ngForm">
     <div class="form-group">
       <label for="name">Name</label>
-      <input id="name" name="name" class="form-control" type="text"/>
+      <input id="name" name="name" class="form-control" type="text" [(ngModel)]="userSettings.name"/>
     </div>
 
     <div class="form-check form-group">
-      <input type="checkbox" class="form-check-input" id="emailOffers" name="emailOffers">
+      <input type="checkbox" class="form-check-input" id="emailOffers" name="emailOffers" [(ngModel)]="userSettings.emailOffers">
       <label class="form-check-label" for="emailOffers">Email Special Offers</label>
     </div>
 
     <p>User Interface Style</p>
     <div class="form-group">
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="interface" id="lightInterface" value="light" checked>
+        <input class="form-check-input" type="radio" name="interface" id="lightInterface" value="light" checked [(ngModel)]="userSettings.interfaceStyle">
         <label for="lightInterface" class="form-check-label">Light</label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="interface" id="mediumInterface" value="medium">
+        <input class="form-check-input" type="radio" name="interface" id="mediumInterface" value="medium" [(ngModel)]="userSettings.interfaceStyle">
         <label for="mediumInterface" class="form-check-label">Medium</label>
       </div>
       <div class="form-check">
-        <input class="form-check-input" type="radio" name="interface" id="darkInterface" value="dark">
+        <input class="form-check-input" type="radio" name="interface" id="darkInterface" value="dark" [(ngModel)]="userSettings.interfaceStyle">
         <label for="darkInterface" class="form-check-label">Dark</label>
       </div>
     </div>
     
     <div class="form-group">
       <label for="subscriptionType">Subscription Type</label>
-      <select id="subscriptionType" class="form-control">
+      <select id="subscriptionType" class="form-control" name="subscriptionType" [(ngModel)]="userSettings.subscriptionType">
         <option>Monthly</option>
         <option>Annual</option>
         <option>Lifetime</option>
@@ -38,9 +38,11 @@
 
     <div class="form-group">
       <label for="notes">Notes</label>
-      <textarea name="notes" id="notes" rows="3" class="form-control"></textarea>
+      <textarea name="notes" id="notes" rows="3" class="form-control" [(ngModel)]="userSettings.notes"></textarea>
     </div>
 
     <button class="btn btn-primary">Send</button>
   </form>
 </div>
+
+{{ form.value | json}}
