--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,9 +1,11 @@
 <div class="container">
   <h2>User Settings</h2>
-  <form #form="ngForm">
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)">
     <div class="form-group">
       <label for="name">Name</label>
-      <input id="name" name="name" class="form-control" type="text" [(ngModel)]="userSettings.name"/>
+      <input id="name" name="name" class="form-control" type="text" [(ngModel)]="userSettings.name" 
+            required #nameField="ngModel" [class.field-error]="form.submitted && nameField.invalid" />
+      <div [hidden]="!form.submitted || nameField.valid" class="alert alert-danger">Enter a name</div>
     </div>
 
     <div class="form-check form-group">
