Add http access and handling POST errors

--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -43,6 +43,7 @@
       <textarea name="notes" id="notes" rows="3" class="form-control" [(ngModel)]="userSettings.notes"></textarea>
     </div>
 
+    <div [hidden]="!postError" class="alert alert-danger">{{ postErrorMessage }}</div>
     <button class="btn btn-primary">Send</button>
   </form>
 </div>
